--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
   </head>
   <body>
-  <h1>Yes</h1>
+    <div style="font-size: 150px; text-align: center">
+    Yes.
+    </div>
   </body>
 </html>
 
