--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   </head>
   <body>
-    <div style="font-size: 150px; text-align: center">
+    <div style="font-size: 100px;">
     Yes.
     </div>
   </body>
